# minimal-ptt-examples

./: .editorconfig  .gitignore  ContractModel.md  Escrow.html  PTT.md  README.md  cabal.project  contract-model-with-cooked.md  cooked-offchain-example.md  coverageReport.html  coverageReport2.html  deletethis  deletethis.md  escrow.cabal  escrow.nix  fl.nix  flake.nix  governance.cabal  internal-lib.nix  sha256map.nix  vesting.cabal
certification/: certification.cabal
certification/src/: Certification.hs
escrow/: cabal.project  escrow-common.nix  escrow.cabal  escrow.nix
escrow/apps-compat-contractmodel/: apps-compat-contractmodel.cabal
escrow/certification/: certification.cabal
escrow/certification/src/: Certification.hs
escrow/cooked-contractmodel/: cooked-contractmodel.cabal
escrow/plutus-contract-certification/: plutus-contract-certification.cabal
escrow/plutus-contract-certification-cooked/: plutus-contract-certification-cooked.cabal
escrow/plutus-contract-certification-cooked/src/Plutus/Contract/Test/Cooked/: Certification.hs
escrow/plutus-contract-certification-cooked/src/Plutus/Contract/Test/Cooked/Certification/: Run.hs
escrow/plutus-contract-certification/src/Plutus/Contract/Test/: Certification.hs
escrow/plutus-contract-certification/src/Plutus/Contract/Test/Certification/: Run.hs
escrow/src/Contract/: Escrow.hs  OffChain.hs  backup2  backupEscrow
escrow/tests/: Spec.hs
escrow/tests/Spec/: Endpoints.hs  Escrow.hs  EscrowSpec.hs  GenUnitTest.hs  output.object  output.txt
lotto/offchain/: backupproj  cabal.project  lotto-offchain.cabal
lotto/offchain/exe/: Main.hs
lotto/offchain/src/: Lib.hs  Lotto.hs  Scenarii.hs
lotto/offchain/test/Spec/: Lotto.hs
nix/: haskell-project.nix  iogx-config.nix  per-system-outputs.nix  project.nix  shell.nix
nix/pkgs/haskell/: sha256map.nix
plutus-contract-certification/: plutus-contract-certification-node.cabal  plutus-contract-certification.cabal
plutus-contract-certification/src/Plutus/Contract/Test/: Certification.hs
plutus-contract-certification/src/Plutus/Contract/Test/Certification/: Run.hs
quickcheck-contractmodel-cooked/: README.md  cabal.project
quickcheck-contractmodel-cooked/apps-compat-contractmodel/src/Test/QuickCheck/ContractModel/: PlutusCompat.hs
quickcheck-contractmodel-cooked/cooked-contractmodel/: cooked-contractmodel.cabal
quickcheck-contractmodel-cooked/cooked-contractmodel/src/Test/QuickCheck/ContractModel/: Cooked.hs
quickcheck-contractmodel-cooked/cooked-contractmodel/test/: Spec.hs
quickcheck-contractmodel-cooked/cooked-contractmodel/test/Spec/: Auction.hs
src/Contract/: Blueprint.hs  Escrow.hs  Governance.hs  ToUPLC.hs  Vesting.hs
tests/: Spec.hs
tests/Spec/: Escrow.hs  Governance.hs  Vesting.hs
utils/: cp-sha256.sh
vesting/: cabal.project  certCoverage.html  vesting.cabal
vesting/certification/: certification.cabal
vesting/certification/src/: Certification.hs
vesting/plutus-contract-certification/src/Plutus/Contract/Test/Certification/: Run.hs
vesting/src/Contract/: Vesting.hs
vesting/tests/: Spec.hs
vesting/tests/Spec/: Vesting.hs
