cabal-version:   2.0
name:            plutus-use-cases
version:         1.2.0.0
license:         Apache-2.0
license-file:    LICENSE NOTICE
maintainer:      jann.mueller@iohk.io
author:          Manuel M T Chakravarty, Jann Müller
stability:       experimental
synopsis:
  Collection of smart contracts to develop the plutus/wallet interface

description:
  Collection of smart contracts to develop the plutus/wallet interface.

category:        Language
build-type:      Simple
extra-doc-files: README.md

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

library
  exposed-modules:
    Contract.Escrow

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

  --------------------
  -- Local components
  --------------------
  build-depends:
      cardano-node-emulator    >=1.2.0
    , plutus-chain-index-core  >=1.2.0
    , plutus-contract          >=1.2.0
    , plutus-ledger            >=1.2.0
    , plutus-script-utils      >=1.2.0
    , plutus-tx-constraints    >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
      cardano-api
    , plutus-core        >=1.0.0
    , plutus-ledger-api  >=1.0.0
    , plutus-tx          >=1.0.0
    , plutus-tx-plugin   >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
      aeson
    , base
    , bytestring
    , containers
    , freer-simple
    , hashable
    , lens
    , openapi3
    , prettyprinter
    , semigroups
    , serialise
    , streaming
    , template-haskell
    , text

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

test-suite escrow-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     tests
  other-modules:
    Spec.Escrow
    Spec.Endpoints

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -rtsopts -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  --------------------
  -- Local components
  --------------------
  build-depends:
      cardano-node-emulator          >=1.1.0
    , freer-extras                   >=1.1.0
    , plutus-contract                >=1.1.0
    , plutus-contract-certification  >=1.1.0
    , plutus-ledger                  >=1.1.0
    , plutus-script-utils            >=1.1.0
    , plutus-tx-constraints          >=1.1.0
    , plutus-use-cases               >=1.1.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
      cardano-api                  >=1.35
    , cardano-binary
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma
    , cardano-slotting
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , plutus-ledger-api            >=1.0.0
    , plutus-tx                    >=1.0.0
    , quickcheck-contractmodel     >=0.1.3.0
    , quickcheck-dynamic           >=3.0.2

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
      aeson
    , base               >=4.9     && <5
    , bytestring
    , containers
    , data-default
    , foldl
    , freer-simple
    , lens
    , mmorph
    , mtl
    , pretty
    , prettyprinter
    , QuickCheck
    , streaming
    , strict-containers
    , tasty
    , tasty-golden
    , tasty-hedgehog     >=0.2.0.0
    , tasty-hunit
    , tasty-quickcheck
    , text
    , time
