cabal-version:      2.4
name:               apps-compat-contractmodel
version:            0.1.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Maximilian Algehed
maintainer:         maximilian.algehed@quviq.com

-- A copyright notice.
-- copyright:
-- category:

common lang
  default-language:   Haskell2010
  default-extensions:
    RecordWildCards
    ViewPatterns
    DeriveFunctor
    DeriveDataTypeable
    StandaloneDeriving
    ImportQualifiedPost
    TupleSections
    LambdaCase
    PatternSynonyms
    GADTs
    TypeApplications
    ScopedTypeVariables
    TypeFamilies
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    RankNTypes
    GeneralizedNewtypeDeriving
    PolyKinds
    TemplateHaskell
    DataKinds
    DefaultSignatures
    ConstraintKinds
    DeriveGeneric
    DerivingVia
    TypeOperators
    OverloadedStrings
    NumericUnderscores

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wno-name-shadowing
    -Wno-orphans -Wno-redundant-constraints

library
    import: lang
    hs-source-dirs: src
    exposed-modules:
      Test.QuickCheck.ContractModel.PlutusCompat
    -- Internal dependencies
    build-depends:
      quickcheck-contractmodel,
      quickcheck-dynamic,
    -- General dependencies
    build-depends:
      base >=4.7 && <5,
      containers,
      random,
    -- Plutus and Cardano dependencies
    build-depends:
      plutus-ledger-api,
      plutus-tx,
      plutus-script-utils,
      plutus-ledger,
      cardano-api >= 1.35,
      cardano-slotting,
      cardano-crypto-class,
