cabal-version:      2.4
name:               cooked-contractmodel
version:            0.1.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Maximilian Algehed
maintainer:         maximilian.algehed@quviq.com

-- A copyright notice.
-- copyright:
-- category:

common lang
  default-language:   Haskell2010
  default-extensions:
    RecordWildCards
    ViewPatterns
    DeriveFunctor
    DeriveDataTypeable
    StandaloneDeriving
    ImportQualifiedPost
    TupleSections
    LambdaCase
    PatternSynonyms
    GADTs
    TypeApplications
    ScopedTypeVariables
    TypeFamilies
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    RankNTypes
    GeneralizedNewtypeDeriving
    PolyKinds
    TemplateHaskell
    DataKinds
    DefaultSignatures
    ConstraintKinds
    DeriveGeneric
    DerivingVia
    TypeOperators
    OverloadedStrings
    NumericUnderscores

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wno-name-shadowing
    -Wno-orphans -Wno-redundant-constraints

library
    import: lang
    hs-source-dirs: src
    exposed-modules:
      Test.QuickCheck.ContractModel.Cooked
    -- Internal dependencies
    build-depends:
      apps-compat-contractmodel,
      quickcheck-contractmodel
    -- General dependencies
    build-depends:
      base >=4.7 && <5,
      cooked-validators,
      lens,
      mtl,
      monad-control,
      QuickCheck -any,
      quickcheck-dynamic >= 2.0.0,
    -- Plutus and Cardano dependencies
    build-depends:
      plutus-ledger-api,
      plutus-tx,
      plutus-script-utils,
      plutus-ledger,
      plutus-contract,
      cardano-api >= 1.35,
      cardano-node-emulator,

test-suite cooked-contractmodel-tests
  import: lang
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:
    Spec.Auction
  -- Internal dependencies
  build-depends:
    apps-compat-contractmodel,
    quickcheck-contractmodel,
    cooked-contractmodel
  -- General dependencies
  build-depends:
    base >=4.7 && <5,
    cooked-validators,
    auction,
    lens,
    mtl,
    bytestring,
    data-default,
    monad-control,
    QuickCheck -any,
    quickcheck-dynamic >= 2.0.0,
    tasty,
    tasty-quickcheck
  -- Plutus and Cardano dependencies
  build-depends:
    plutus-ledger-api,
    plutus-tx,
    plutus-script-utils,
    plutus-ledger,
    plutus-contract,
    cardano-api >= 1.35,
    cardano-slotting,
    cardano-node-emulator,

