cabal-version:      2.4
name:               certification
version:            0.1.0.0
author:             Alasdair Hill
maintainer:         alasdair.hill@iohk.io
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Certification
  build-depends:
    , base
    , plutus-contract-certification
    , vesting

  hs-source-dirs:   src
  default-language: Haskell2010
